# cnn_captcha

./: flake.nix  pyproject.toml  recognize.py
conf/: captcha_config.json  sample_config.json
